--- a/style.css
+++ b/style.css
@@ -1,8 +1,28 @@
-* {box-sizing: border-box;}
+* {box-sizing: border-box;
+justify-content: center;
+}
 
 body { 
   margin: 0px 200px 0px 200px;
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.imgstyle {
+  display: flex;
+  justify-content: center;
+}
+
+.sty1{
+  text-align: center;
+  margin: 0px 250px 0px 250px;
+text-transform: uppercase;
+
+}
+
+.sty2 {
+  text-align: justify;
+  padding: 10px;
+margin-bottom: 100px;
 }
 
 .header {
@@ -53,4 +73,8 @@ body {
   .header-right {
     float: none;
   }
+}
+
+footer {
+  text-align: center;
 }
