--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ justify-content: center;
 }
 
 body { 
-  margin: 0px 200px 0px 200px;
+  margin: 50px 200px 50px 200px;
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -12,17 +12,21 @@ body {
   justify-content: center;
 }
 
+
 .sty1{
   text-align: center;
-  margin: 0px 250px 0px 250px;
-text-transform: uppercase;
-
+  margin: 0px 300px 0px 300px;
 }
 
 .sty2 {
   text-align: justify;
   padding: 10px;
 margin-bottom: 100px;
+}
+
+
+b {
+  color: green;
 }
 
 .header {
@@ -44,18 +48,18 @@ margin-bottom: 100px;
   border-radius: 4px;
 }
 
-.header a.logo {
+.header a.logo  {
   font-size: 25px;
   font-weight: bold;
 }
 
-.header a:hover {
+.header a:hover, .btn.bt1 {
   background-color: #ddd;
   color: black;
 }
 
-.header a.active {
-  background-color: dodgerblue;
+.header a.active, .btn.bt1 {
+  background-color: black;
   color: white;
 }
 
@@ -77,4 +81,22 @@ margin-bottom: 100px;
 
 footer {
   text-align: center;
+}
+
+button    {
+  background-color: transparent;
+  border: 2px solid orange;
+  padding: 5px;
+}
+
+a {
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.btn.btn2 {
+  background-color: transparent;
+  font-size: 18px;
+  border: 2px solid black;
+  padding: 15px;
 }
